- drakperm:
  o warning dialogs are confusing since OK/cancel both ends in cancel,
    let's offer only a cancel button

Version 10.6.15 - 7 February 2008

- harddrake:
  o do not try to install openoffice64 on x86_64 (#37318)

Version 10.6.14 - 5 February 2008

- bootloader-config:
  o never use "vmlinuz-desktop" or "initrd-desktop.img", always use "vmlinuz"
    or "initrd.img" (#35721)
- drakfont:
  o fix crashing on file names with meta characters (#36482)
- enhance the logout dialog (ok/cancel instead of yes/no)
- short-circuit exit once drakbug was run on crash

Version 10.6.11 - 31 January 2008

- drakbug:
  o autoselect distro version in bugzilla
  o explain what is the usefull part of the gdb trace
  o open help as user
  o stop translating program name in bugzilla (#35241)

Version 10.6.10 - 28 January 2008

- handle new drivers: 
  o ethernet: cpmac
  o gigabit: ipg
  o pata/sata: pata_bf54x, sata_fsl
  o sound: snd-at73c213 
  o tv cards: cx23885
  o webcams: tcm825x
- detect raid partitions based on either type 0xfd or vol_id detecting
  linux_raid_member (#35684)
- bootloader-config:
  o fix handling LVM VGs with "-" in the name (#37267)
  o do not drop "lock" in chainload entries from grub's menu.lst (#36398)
- diskdrake --fileshare:
  o adapt to nfs-utils service rename (nfs-server instead of nfs) (#37069)

Version 10.6.9 - 25 January 2008

- harddrake:
  o class more sensors as biometric
- drakbug:
  o do not display twice "Cannot be run in console mode." message
- finish-install:
  o do ask again language (got wrongly disabled in 10.6.8)
- harddrake service:
  o backup xorg.conf before falling back to safe driver (#37182)

Version 10.6.8 - 24 January 2008

- bootloader-config, diskdrake:
  o look for LVM PV on non partitioned disk before looking for DOS
    partition_table (esp. for lilo which puts the DOS magic)
- drakbug:
  o make "Please describe what you were doing when it crashed" more