@@ -1,3 +1,4 @@
+- add support for Gtk2::Sexy::IconEntry (needed for rpmdrake)
 - drakperm:
   o warning dialogs are confusing since OK/cancel both ends in cancel,
     let's offer only a cancel button
